cabal-version:      2.4
name:               fluidsim
version:            0.1.0.0

author:             Jachdich
maintainer:         jamesedkitching@gmail.com

executable progcomp
    main-is:          Main.hs

    other-extensions: NamedFieldPuns

    build-depends:
        base ^>=4.16.4.0,
        array,
        OpenGL,
        GLUT,
        JuicyPixels,
        ghc
        
    hs-source-dirs:   .
    default-language: Haskell2010
